[package]
name = "loki"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.0" , features = ["cargo"]}
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.87"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
